# forge-gpu

./: .gitignore  AI_PROMPT.md  CONTRIBUTING.md  Cargo.toml  DECLARATIVE_DESIGN.md  DESIGN.md  Dockerfile  LICENSE  PROJECT_PLAN.md  README.md  ROADMAP.md  TOML_REFERENCE.md  WARP_PARITY.md
.github/workflows/: ci.yml
benchmarks/: warp_comparison.py
demos/: ai_scene_gen.py
examples/: cloth-on-sphere.toml  dam-break.toml  drop-bounce.toml  kernel_demo.rs  long-demo.toml  particle-rain-heavy.toml  particle-rain.toml  particles.rs  slow-demo.toml  spring_optimize.rs  spring_sim.rs  tsunami-clash.toml  vortex-ring.toml  vortex.toml  waterfall.toml
forge/: Cargo.toml
forge-codegen/: Cargo.toml
forge-codegen/src/: lib.rs
forge-core/: Cargo.toml
forge-core/src/: gpu_traits.rs  lib.rs  mat.rs  quat.rs  scalar.rs  vec.rs
forge-interop/: forge_interop.py  test_interop.py
forge-macros/: Cargo.toml
forge-macros/src/: autodiff.rs  autodiff_parse.rs  cuda_emit.rs  forge_struct.rs  func.rs  kernel.rs  kernel_autodiff.rs  lib.rs
forge-manifest/: Cargo.toml
forge-manifest/src/: expr.rs  lib.rs  manifest_runner.rs  phantom_bridge.rs  runner.rs  schema.rs  serve.rs  validate.rs  viewer.html
forge-manifest/src/modules/: mod.rs
forge-manifest/src/modules/builtins/: box_collider.rs  drag.rs  expr_module.rs  gravity.rs  ground_plane.rs  integrate.rs  mod.rs  pin.rs  sph_density.rs  sph_fused.rs  sph_pressure.rs  sph_viscosity.rs  sphere_collider.rs  spring.rs
forge-runtime/: Cargo.toml
forge-runtime/src/: array.rs  bvh.rs  cg.rs  cuda.rs  device.rs  error.rs  hashgrid.rs  jacobian.rs  kernel.rs  lib.rs  mesh.rs  radix_sort.rs  sparse.rs  tape.rs  tile.rs
forge-runtime/tests/: cuda_kernel_test.rs
forge/src/: lib.rs
tests/: advanced_autodiff_test.rs  autodiff_test.rs  benchmark_suite.rs  bvh_test.rs  cg_test.rs  cpu_fallback_test.rs  forge_struct_test.rs  func_macro_test.rs  hashgrid_test.rs  kernel_macro_test.rs  mesh_test.rs  multi_gpu_test.rs  noise_test.rs  quat_test.rs  radix_sort_test.rs  sparse_test.rs  tape_test.rs  vec_kernel_test.rs  vector_math_test.rs
