[workspace]
members = [
    "forge",
    "forge-core",
    "forge-codegen",
    "forge-macros",
    "forge-runtime",
    "forge-manifest",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/huaying/forge-gpu"
description = "A Rust-native GPU compute framework built for the age of AI"

[[example]]
name = "particles"
path = "examples/particles.rs"

[[example]]
name = "kernel_demo"
path = "examples/kernel_demo.rs"

[dependencies]
forge-core = { path = "forge-core" }
forge-macros = { path = "forge-macros" }
forge-runtime = { path = "forge-runtime", features = ["cuda"] }

[features]
default = ["cuda"]
cuda = ["forge-runtime/cuda"]

[package]
name = "forge-examples"
version = "0.1.0"
edition = "2024"
