[package]
name = "forge-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core types for Forge: vectors, matrices, quaternions, arrays"

[dependencies]
cudarc = { version = "0.19", features = ["driver"], optional = true }

[features]
default = []
cuda = ["dep:cudarc"]
