[package]
name = "forge-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "GPU runtime for Forge: device management, memory, kernel dispatch"

[dependencies]
forge-core = { path = "../forge-core" }
cudarc = { version = "0.19", features = ["driver", "nvrtc", "cuda-12060"], optional = true }

[features]
default = []
cuda = ["dep:cudarc"]
